# Gazolina

./: .gitignore  README.md
uv_gazolina/: main.py  pipeline.conf.enc  pyproject.toml  requirements.txt  root-app.yaml
uv_gazolina/BPMN/: diagram.bpmn
uv_gazolina/dags/: dag_essence.py
uv_gazolina/data/: mon_essence.parquet
uv_gazolina/gitops/apps/: airflow-app.yaml  airflow.yaml  postgresql.yaml  secrets.yaml  selenium-standalone-chrome.yaml
uv_gazolina/gitops/components/postgresql/: values.yaml
uv_gazolina/gitops/helm/airflow/: .helmignore  Chart.yaml  values.yaml
uv_gazolina/gitops/helm/airflow/templates/: _noop.tpl
uv_gazolina/gitops/projects/: platform-project.yaml
uv_gazolina/gitops/secrets/: mongo-pipeline.yaml
uv_gazolina/helm/: airflow-app.yaml
uv_gazolina/script/: MonEssence.py
uv_gazolina/scripts/: MonEssence.py  utils.py
