[project]
name = "uv-gazolina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "geopy>=2.4.1",
    "polars>=1.34.0",
    "pydeck>=0.9.1",
    "pymongo>=4.15.2",
    "selenium>=4.36.0",
    "streamlit>=1.50.0",
]
